@@ -1,8 +1,17 @@
 package one.lindegaard.MobHunting.compatibility;
 
+import java.io.File;
+import java.io.IOException;
+
 import org.bukkit.Bukkit;
+import org.bukkit.configuration.InvalidConfigurationException;
+import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.entity.Player;
+import org.bukkit.event.EventHandler;
+import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
+import org.bukkit.event.player.PlayerJoinEvent;
+
 import com.earth2me.essentials.Essentials;
 import com.earth2me.essentials.User;
 
@@ -63,8 +72,41 @@ public class EssentialsCompat implements Listener {
 		return false;
 	}
 
+	public static double getBalance(Player player) {
+		double bal = mPlugin.getOfflineUser(player.getName()).getMoney().doubleValue();
+		return bal;
+	}
+
+	public static double getEssentialsBalance(Player player) {
+		if (supported) {
+			String uuid = EssentialsCompat.getEssentials().getOfflineUser(player.getName()).getConfigUUID().toString();
+			File datafolder = EssentialsCompat.getEssentials().getDataFolder();
+			if (datafolder.exists()) {
+				File configfile = new File(datafolder + "/userdata/" + uuid + ".yml");
+				if (configfile.exists()) {
+					YamlConfiguration config = new YamlConfiguration();
+					try {
+						config.load(configfile);
+					} catch (IOException | InvalidConfigurationException e) {
+						// TODO Auto-generated catch block
+						e.printStackTrace();
+						return 0;
+					}
+					return Double.valueOf(config.getString("money"));
+				} 
+			}
+		}
+		return 0;
+	}
+
 	// **************************************************************************
 	// EVENTS
 	// **************************************************************************
+
+	@EventHandler(priority = EventPriority.LOWEST, ignoreCancelled = true)
+	private void onPlayerJoin(PlayerJoinEvent event) {
+		final Player player = event.getPlayer();
+		// Messages.debug("ESS Balance=%s", getEssBalance(player));
+	}
 
 }
